--- a/client/src/Stylesheets/Home.css
+++ b/client/src/Stylesheets/Home.css
@@ -1,3 +1,80 @@
-.postCard{
-   box-shadow: rgb(31 143 168 / 20%) 1px 20px 25px -18px;
+.intro{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+.intro >img{
+    width: 790px;
+}
+
+.headingText{
+    font-size: 30px;
+    font-style: italic;
+    color: #6700ff;
+    position: relative;
+    top: 55px;
+}
+
+.medText{
+    font-size: 24px;
+    position: relative;
+    left: 10px;
+}
+
+.displayContent > div{
+    display: flex;
+    width: 950px;
+    margin: 50px auto;
+   
+}
+
+.medImg{
+    width: 425px;
+}
+
+.box1 p {
+    width: 270px;
+    position: relative;
+    left: 170px;
+    top: 150px;
+}
+
+.box2 img{
+    width: 560px;
+}
+
+.box2 p{
+    top: 140px;
+    width: 300px;
+    left: 10px;
+    padding: 0px 65px 0px 50px;
+}
+
+.box3{
+    align-items: center;
+    flex-direction: column;
+    margin-bottom: 30px;
+}
+
+.box3 img{
+    width: 800px;
+}
+
+.box3 p{
+    font-size: 20px;
+    text-align: center;
+    margin-bottom: 25px;
+}
+
+.medButtons{
+    background-color: #5158BB;
+    font-size: 20px;
+    border-radius: 20px;
+    padding: 10px;
+    border: none;
+    width: 150px;
+    color: #fff;
+    cursor: pointer;
 }
