--- a/client/src/Stylesheets/SideBar.css
+++ b/client/src/Stylesheets/SideBar.css
@@ -1,6 +1,6 @@
 .SideBar{
-   margin-left: 10px;
-   width: 100px;
+   padding-left: 25px;
+   width: 50px;
    height: 100vh;
    position: absolute;
    display: flex;
