--- a/client/src/Stylesheets/NavButtons.css
+++ b/client/src/Stylesheets/NavButtons.css
@@ -11,8 +11,15 @@
     display: flex;
     flex-direction: column;
     float: right;
+    margin-right: 100px;
+    margin-top: 30px;
+    height: 60px;
+    justify-content: space-between;
 }
 
+.loggedIn p{
+    font-size: 18px;
+}
 .logout{
     float:right;
 }
