--- a/client/src/Stylesheets/ProfilePage.css
+++ b/client/src/Stylesheets/ProfilePage.css
@@ -1,10 +1,13 @@
 .userInfo{
+    display: flex;
+    flex-direction: column;
     margin-left: 20px;
 }
 
-.headingText{
+.headingTextPf{
     font-size: 30px;
     font-style: italic;
+    color: #6700ff;
 }
 
 .smallText{
@@ -13,5 +16,6 @@
 }
 
 .medTextHeading{
-
+    margin-top: 30px;
+    font-size: 20px;
 }
