--- a/client/src/Stylesheets/SideBar.css
+++ b/client/src/Stylesheets/SideBar.css
@@ -2,7 +2,7 @@
    padding-left: 25px;
    width: 50px;
    height: 100vh;
-   position: absolute;
+   position: fixed;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
