--- a/client/src/Stylesheets/SideBar.css
+++ b/client/src/Stylesheets/SideBar.css
@@ -8,7 +8,13 @@
    justify-content: space-between;
 }
 
-.sidebarImg{
+.SideBar p{
+   font-size: 22px;
+    color: blue;
+    padding-top: 10px;
+}
+
+.sideBarImg{
    width: 50px;
    margin-bottom: 20px;
 
