--- a/client/src/Stylesheets/PostCard.css
+++ b/client/src/Stylesheets/PostCard.css
@@ -1,10 +1,13 @@
 .postCardContent{
     display: flex;
     flex-direction: column;
-    height: 120px;
     justify-content: space-evenly;
     margin-bottom:50px;
     padding:20px;
+}
+
+.postCardContent a{
+    color:#3281d3;
 }
 
 .postHeader {
@@ -41,3 +44,6 @@
     font-size: 15px;
 }
 
+.commentButton a{
+    color: #333;
+}
